force-app/main/default/objects/Product_Style_Features__c/Product_Style_Features__c.object-meta.xml
<CustomObject>
    <description>Junction object which manages the many to many relationship between unique styles (Product Style Object) and the Features object. Records are created / updated via apex. Does not need to be maintained via integration. 
Object Type: IA 
Integrated: N</description>
    <label>Product Style Features</label>
    <nameField>
        <displayFormat>PSF-{000000}</displayFormat>
        <label>Product Style Feature #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Style Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>