force-app/main/default/objects/Product_Style_Features__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the Feature object.  Used to associate a Product Style to a Feature.  Maintained by apex.
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Lookup field to the Feature object.  Used to associate a Product Style to a Feature.</inlineHelpText>
    <label>Feature</label>
    <referenceTo>Features__c</referenceTo>
    <relationshipLabel>Product Style Features</relationshipLabel>
    <relationshipName>Product_Style_Features</relationshipName>
    <type>Lookup</type>
</CustomField>