force-app/main/default/objects/Product_Style_Features__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <formula>Feature__r.Feature_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feature Name</label>
    <type>Text</type>
</CustomField>