force-app/main/default/objects/Product_Style_Features__c/fields/Product_Style__c.field-meta.xml
<CustomField>
    <fullName>Product_Style__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the Product Style object. Used to associate a Product Style to a Feature. Maintained by apex. 
Field Type: IA 
Integrated: N</description>
    <inlineHelpText>Lookup field to the Product Style object. Used to associate a Product Style to a Feature.</inlineHelpText>
    <label>Product Style</label>
    <referenceTo>Product_Style__c</referenceTo>
    <relationshipLabel>Product Style Features</relationshipLabel>
    <relationshipName>Product_Style_Features</relationshipName>
    <type>Lookup</type>
</CustomField>