force-app/main/default/objects/Product_Style_Features__c/fields/RWS_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>RWS_Last_Updated_Date__c</fullName>
    <description>Date/Time to identify RWS Integration Last Updated Date</description>
    <label>RWS Last Updated Date</label>
    <type>DateTime</type>
</CustomField>