force-app/main/default/objects/Product_Style_Features__c/fields/Style_Number_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Style_Number_Unique_ID__c</fullName>
    <description>Reference related Product Style Unique Style Id</description>
    <formula>Product_Style__r.Style_Number_Unique_ID__c</formula>
    <label>Style Number Unique ID</label>
    <type>Text</type>
</CustomField>