force-app/main/default/objects/Product_Style_Features__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Style__c</columns>
    <columns>Feature__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>